@@ -24,8 +24,6 @@
   }                                                     \
 } while (0)
 
-using std::map;
-using std::make_pair;
 using pcrecpp::StringPiece;
 
 static void CheckSTLComparator() {
@@ -37,12 +35,13 @@ static void CheckSTLComparator() {
   StringPiece p2(s2);
   StringPiece p3(s3);
 
-  typedef map<StringPiece, int> TestMap;
+  typedef std::map<StringPiece, int> TestMap;
   TestMap map;
 
-  map.insert(make_pair(p1, 0));
-  map.insert(make_pair(p2, 1));
-  map.insert(make_pair(p3, 2));
+  map.insert(std::make_pair(p1, 0));
+  map.insert(std::make_pair(p2, 1));
+  map.insert(std::make_pair(p3, 2));
+
   CHECK(map.size() == 3);
 
   TestMap::const_iterator iter = map.begin();
